fix: logo height on mobile

--- a/frontend/src/assets/styles/widget/_nav-menu.scss
+++ b/frontend/src/assets/styles/widget/_nav-menu.scss
@@ -4,6 +4,10 @@
 	.nav-content {
 		padding: 16px;
 	}
+
+	#logo {
+		height: 40px;
+	}
 }
 
 @media (max-width: 768px) {
